# paubox-rust

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  RELEASING.md  SECURITY.md  api.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: check_disposition.rs  get_form.rs  send_email.rs  submit_form.rs
src/: client.rs  error.rs  lib.rs
src/email/: message.rs  mod.rs  response.rs
src/forms/: form.rs  mod.rs  submission.rs
tests/: email_mock_tests.rs  forms_mock_tests.rs
