[package]
name = "paubox"
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
license = "Apache-2.0"
description = "Async Rust SDK for the Paubox Email and Forms APIs (HIPAA-compliant)"
repository = "https://github.com/Paubox/paubox-rust"
homepage = "https://www.paubox.com"
documentation = "https://docs.rs/paubox"
readme = "README.md"
keywords = ["paubox", "email", "hipaa", "forms", "healthcare"]
categories = ["email", "api-bindings", "web-programming::http-client"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["email", "forms"]
email = []
forms = []

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
thiserror = "2"
base64 = "0.22"
url = "2"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
